# COMP-ORGproject1

./: .gitignore  CMakeLists.txt  README (1).md  README.md  backend_api.cpp  build_frontend.js  build_test_backend.js  index.html  style.css  test_page_load.js
.github/workflows/: deploy-pages.yml
asm/: snake.s
asm/tests/: 01_arithmetic_registers.s  02_immediate_operations.s  03_logic_shift_compare.s  04_memory_load_store.s  05_branches_jumps.s  06_stack_subroutines.s  07_console_string_services.s  08_rng_keyboard_audio.s  09_graphics_vram.s  10_full_integration_corner_cases.s
docs/: assembly_test_results.md
reference/: compare_assembly_tests.py
src/: breakpoint_manager.h  cpu.cpp  cpu.h  graphics_memory.cpp  graphics_memory.h  gui.cpp  gui.h  main.cpp  main.ts  memory.cpp  memory.h  program_loader.cpp  program_loader.h  register_file.cpp  snake_runtime.cpp  snake_runtime.h  system_memory.cpp  system_memory.h
src/app/: main.cpp
src/core/: cpu.cpp  cpu.h  ecall.cpp  graphics_memory.cpp  graphics_memory.h  instruction_decoder.cpp  instruction_decoder.h  program_loader.cpp  snake_runtime.cpp
src/desktop/: gui.cpp  gui.h
tests/: test_fetch.cpp
tools/: build_hello_wasm.ps1  build_web_page.ps1  install_emscripten.ps1  test_backend_wasm.ps1
web/: index.html  style.css  test_page_load.js
web/hello/: hello.cpp
web/src/: main.ts  test_backend.ts
